serializing Byron addresses

--- a/shelley/chain-and-ledger/executable-spec/shelley-spec-ledger.cabal
+++ b/shelley/chain-and-ledger/executable-spec/shelley-spec-ledger.cabal
@@ -88,6 +88,7 @@ library
     base >= 4.7 && < 5,
     binary,
     bytestring,
+    cardano-ledger,
     cborg,
     cborg-json,
     containers,
@@ -178,6 +179,7 @@ test-suite shelley-spec-ledger-test
       bytestring-conversion,
       cardano-binary,
       cardano-crypto-class,
+      cardano-ledger-test,
       cardano-prelude,
       cardano-slotting,
       cborg,
